--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "app.js",
   "author": "Murilo Mothsin",
   "license": "MIT",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
