added health check route, improved chart resolution and changed package.json author

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "echarts-generator",
   "version": "1.0.0",
   "main": "app.js",
-  "author": "Murilo Mothsin",
+  "author": "Pedro Mothsin",
   "license": "MIT",
   "scripts": {
     "start": "node app.js"
