--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Pedro Mothsin",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "echarts": "^5.4.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
