--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "echarts": "^5.4.3",
+    "echarts-stat": "^1.2.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
